--- a/blog.html
+++ b/blog.html
@@ -122,7 +122,7 @@
                 <div class="box" style="background-color:#ccc">
                 <p>Some text inside the box.</p>
                 </div>
-                
+
                 <div class="box" style="background-color:#ddd">
                 <p>Some text inside the box.</p>
                 </div>
@@ -130,7 +130,26 @@
 
               <p><strong>Amazing cities</strong> tourism destiantion centers to 
                 enjoy the nature. we use the clearfix hack to take care of the layout flow. 
-                We also use the box-sizing property to make 
+                We also use the box-sizing property to make </p>
+
+                <!--Another Image-->
+
+
+                <h2>Images Side by Side</h2>
+<p>Float images side by side:</p>
+
+<div class="clearfix">
+  <div class="img-container">
+  <img src="images/fintech.jpg" alt="Italy" style="width:100%">
+  </div>
+  <div class="img-container">
+  <img src="images/hamburg.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="img-container">
+  <img src="images/img_1.jpg" alt="Mountains" style="width:100%">
+  </div>
+</div>
+
 
             <!--Travel Lifestyle Hamburg-->
             <div id="border" class="clearfix">
